# vector

./: 404.html  HermiteFunction.py  LICENSE  README.ipynb  README.md  hermitefunction.py  index.html  mkdocs.yml  npvec.py  objects.inv  profiling.ipynb  pyproject.toml  search.html  setup.py  sitemap.xml  test_HermiteFunction.py  test_hermitefunction.py  test_vector.py  vector.py
dense/: index.html
design/: index.html
docs/: dense.md  design.md  functional.md  index.md  inplace.md  lazy.md  multiaxis.md  multilinear.md  multilinear_sparse.md  objectoriented.md  parallelised.md  sparse.md  util.md
docs/stylesheets/: see-also.css
functional/: index.html
inplace/: index.html
lazy/: index.html
multiaxis/: index.html
multilinear/: index.html
multilinear_sparse/: index.html
objectoriented/: index.html
parallelised/: index.html
readme/: readme.py
search/: search_index.json
sparse/: index.html
src/hermite_functions/: hermite_function.py
stylesheets/: complexity.css  references.css  see-also.css
tests/: test_complexity.py  test_dense.py  test_functional.py  test_lazy.py  test_multiaxis.py  test_multilinear.py  test_multilinear_sparse.py  test_parallelised.py  test_sparse.py  test_tensor.py  test_vecclass.py  test_vecfunctions.py  test_vecnumpy.py
util/: index.html
vector/: __init__.py  _pyutil.py  _tensor.py  _utilmodule.c  _vecclass.py  _vecfunctions.py  _vecnumpy.py  functional.py  lazy.py  multiaxis.py  objectoriented.py  parallelised.py  util.py  vecclass.py  vecfunctions.py  vecnumpy.py
vector/dense/: __init__.py  creation.py  elementwise.py  hilbert_space.py  hilbertspace.py  objectoriented.py  utility.py  vector_space.py  vectorspace.py
vector/functional/: __init__.py  creation.py  elementwise.py  hilbert_space.py  objectoriented.py  utility.py  vector_space.py
vector/inplace/: __init__.py  creation.py  elementwise.py  hilbert_space.py  hilbertspace.py  utility.py  vector_space.py  vectorspace.py
vector/lazy/: __init__.py  creation.py  elementwise.py  hilbert_space.py  hilbertspace.py  utility.py  vector_space.py  vectorspace.py
vector/multilinear/: __init__.py  creation.py  elementwise.py  hilbert_space.py  hilbertspace.py  utility.py  vector_space.py  vectorspace.py
vector/multilinear_sparse/: __init__.py  _pyvectorspace.py  _vectorspacemodule.c  conversion.py  creation.py  elementwise.py  hilbert_space.py  hilbertspace.py  objectoriented.py  utility.py  vector_space.py  vectorspace.py
vector/sparse/: __init__.py  conversion.py  creation.py  elementwise.py  hilbert_space.py  hilbertspace.py  objectoriented.py  utility.py  vector_space.py  vectorspace.py
