[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector"
version = "5.0"
description = "An infinite-dimensional vector Python package."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name="Sebastian Gössl", email="goessl@student.tugraz.at"}
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12", #math.sumprod
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Documentation = "https://goessl.github.io/vector"
Repository = "https://github.com/goessl/vector.git"

[tool.hatch.build.targets.wheel]
packages = ["vector"]
include = ["LICENSE", "README.md"]

[tool.hatch.build.targets.sdist]
include = ["vector", "tests",
    "mkdocs.yml", "docs",
    "pyproject.toml", "README.md", "LICENSE"]
