[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector"
version = "12.0"
description = "An infinite-dimensional vector Python package."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name="Sebastian Gössl", email="goessl@student.tugraz.at"}
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "operationcounter @ git+https://github.com/goessl/operationcounter.git",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/goessl/vector"
Documentation = "https://goessl.github.io/vector"
Repository = "https://github.com/goessl/vector.git"

[project.optional-dependencies]
test = ["pytest"]

[[tool.setuptools.ext-modules]]
name = "vector._util"
sources = ["vector/_utilmodule.c"]
py-limited-api = true
