[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector"
version = "14.1"
description = "An infinite-dimensional vector Python package."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  {name="Sebastian Gössl", email="goessl@student.tugraz.at"}
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "iteration @ git+https://github.com/goessl/iteration.git",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/goessl/vector"
Documentation = "https://goessl.github.io/vector"
Repository = "https://github.com/goessl/vector.git"

[project.optional-dependencies]
test = [
  "pytest",
  "operationcounter @ git+https://github.com/goessl/operationcounter.git"
]
